<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.coffeefinder.Start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGroupNumber"
        android:id="@+id/txtGroupNumber"
        android:textSize="30sp"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAhmed"
        android:id="@+id/txtAhmed"
        android:textSize="20sp"
        android:layout_below="@+id/txtGroupNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtManoj"
        android:id="@+id/txtManoj"
        android:textSize="20sp"
        android:layout_below="@+id/txtAhmed"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPaolo"
        android:id="@+id/txtPaolo"
        android:textSize="20sp"
        android:layout_below="@+id/txtManoj"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtZaid"
        android:id="@+id/txtZaid"
        android:textSize="20sp"
        android:layout_below="@+id/txtPaolo"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="220sp"
        android:id="@+id/coffeebackground"
        android:src="@drawable/coffeebackground"
        android:layout_below="@+id/txtZaid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/imgCoffeeBack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFind"
        android:id="@+id/btnFind"
        android:layout_below="@+id/coffeebackground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp" />

</RelativeLayout>
