<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.coffeefinder.BreadFurst">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300sp"
        android:id="@+id/imgBreadFurst"
        android:src="@drawable/breadfurst"
        android:layout_below="@+id/txtBreadFurst"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/breadfurst" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBreadFurst"
        android:id="@+id/txtBreadFurst"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAddBreadFurst"
        android:id="@+id/txtAddBreadFurst"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgBreadFurst"
        android:textSize="30sp"
        style="@style/RtlOverlay.Widget.AppCompat.ActionButton.Overflow" />

    <Button
        style="@style/RtlOverlay.Widget.AppCompat.ActionButton.Overflow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webBreadFurst"
        android:id="@+id/webBreadFurst"
        android:textSize="25sp"
        android:layout_above="@+id/callBreadFurst"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/RtlOverlay.Widget.AppCompat.ActionButton.Overflow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callBreadFurst"
        android:id="@+id/callBreadFurst"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

</RelativeLayout>
